Fixed some issues with missing CUIs.

--- a/clinical-annotator-lookups/Modify PKL Filters.ipynb
+++ b/clinical-annotator-lookups/Modify PKL Filters.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 21,
    "id": "7f70eb14",
    "metadata": {},
    "outputs": [],
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 22,
    "id": "877c36cc",
    "metadata": {},
    "outputs": [],
@@ -47,36 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "6f6c4510",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'Problem': '#FF4081',\n",
-       " 'Finding': '#00BCD4',\n",
-       " 'Procedure': '#4CAF50',\n",
-       " 'Medicine': '#FFC107',\n",
-       " 'Medical Device': '#FF5722',\n",
-       " 'Lab Data': '#CDDC39',\n",
-       " 'Anatomical Structure': '#673AB7',\n",
-       " 'Body Function': '#2196F3',\n",
-       " 'Other': '#9E9E9E'}"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "files['color_lookup.pk']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
    "id": "a6c16a27",
    "metadata": {},
    "outputs": [],
@@ -98,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 15,
    "id": "692a5535",
    "metadata": {},
    "outputs": [],
@@ -114,18 +85,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 16,
    "id": "b9269145",
    "metadata": {},
    "outputs": [],
    "source": [
-    "for fn in ('color_lookup.pk', 'type_tui_lookup.pk'):\n",
+    "for fn in ('color_lookup.pk', 'type_tui_lookup.pk', 'suggestions.pk'):\n",
     "    bkp_fn = f\"{fn}.bkp\"\n",
     "    if not os.path.isfile(bkp_fn): copyfile(fn, f\"{fn}.bkp\")\n",
+    "        \n",
     "with open('color_lookup.pk', mode='wb') as f:\n",
     "    pickle.dump(symptoms_and_diagnoses_colors, f)\n",
     "with open('type_tui_lookup.pk', mode='wb') as f:\n",
-    "    pickle.dump(symptoms_and_diagnoses_type_tui_lookup, f)"
+    "    pickle.dump(symptoms_and_diagnoses_type_tui_lookup, f)\n",
+    "with open('suggestions.pk', mode='wb') as f:\n",
+    "    pickle.dump({}, f)"
    ]
   }
  ],
