Updated PKL filters notebook.

--- a/clinical-annotator-lookups/Modify PKL Filters.ipynb
+++ b/clinical-annotator-lookups/Modify PKL Filters.ipynb
@@ -101,6 +101,27 @@
     "with open('suggestions.pk', mode='wb') as f:\n",
     "    pickle.dump({}, f)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "a93a3e7e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Symptom'"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "symptoms_and_diagnoses_type_tui_lookup[1]['T184']"
+   ]
   }
  ],
  "metadata": {
